--- a/blackCore/pom.xml
+++ b/blackCore/pom.xml
@@ -49,5 +49,11 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.9</version>
+		</dependency>
+
 	</dependencies>
 </project>
